# Teleprompter

./: CMakeLists.txt  Database.qml  Imagens.qrc  LICENSE.txt  Main.qml  PopUpCriarTextos.qml  PopUpEditarTextos.qml  Privacy_Policy.txt  README.md  Teleprompter.qml  Textos.qml  main.cpp  main.qml
android/: AndroidManifest.xml  build.gradle
